--- a/CSIS247Project/res/values/strings.xml
+++ b/CSIS247Project/res/values/strings.xml
@@ -4,9 +4,12 @@
     <string name="hello">Hello World, CSIS247ProjectActivity!</string>
     <string name="app_name">GoWhere?</string>
 
+    
+    
     <!-- Main Screen Button Labels -->
     <string name="event_button_label">Find Events</string>
     <string name="create_event_button_label">Create Event</string>
+    
     
     
     <!-- Event Creation Strings -->
@@ -21,11 +24,16 @@
     <string name="Submit_Button">Submit</string>
     
     
+    
     <!-- EventList Item Strings -->
     <string name="Image_Content_Description">Event Icon</string>
     
+    
+    
     <!-- Menu Labels -->
 	<string name="menu_refresh">Refresh</string>
+	
+	
 	
 	<!-- Event Search Strings -->
 	<string name="Search_Where">Where are the events you\'re looking for?</string>
@@ -40,9 +48,15 @@
 	
 	<string name="Search_Distance">How far away from there would you like to search?</string>  
     <string-array name="distance_array">
-        <item>1 km</item>
-        <item>2 km</item>
-        <item>5 km</item> 
+        <item>1 mile</item>
+        <item>2 miles</item>
+        <item>5 miles</item> 
+        <item>Other</item> 
+    </string-array>
+    <string-array name="distance_array_km">
+        <item>1 kilometer</item>
+        <item>2 kilometers</item>
+        <item>5 kilometers</item> 
         <item>Other</item> 
     </string-array>
     <string name="Search_Specify_Distance">Please specify a distance in</string>
