--- a/CSIS247Project/res/values/strings.xml
+++ b/CSIS247Project/res/values/strings.xml
@@ -23,6 +23,16 @@
     
     <!-- EventList Item Strings -->
     <string name="Image_Content_Description">Event Icon</string>
+    <string name="Event_Item_Time">Time:</string>
+    <string name="Event_Item_Date">Date:</string>
+    <string name="Event_Item_Distance">away.</string>
+    
+    
+    <!-- Event Class Labels -->
+    <string name="Event_Class_Distance">Distance:</string>
+    <string name="Event_Class_Time">Time:</string>
+    <string name="Event_Class_Date">Date:</string>
+    <string name="Event_Class_Description">Description</string>
     
     <!-- Refresh Events Strings -->
     <string name="Refresh_Events_Dialog">Loading&#8230;</string>
